# Fuzzy

./: CMakeLists.txt  main.cpp  test.cpp
core/: BinaryExpression.h  BinaryExpressionModel.h  BinaryShadowExpression.h  Expression.h  ExpressionFactory.h  FuzzyFactory.h  NaryExpression.h  NaryExpressionModel.h  NaryShadowExpression.h  UnaryExpression.h  UnaryExpressionModel.h  UnaryShadowExpression.h  ValueModel.h  expression.h
fuzzy/: AggMax.h  AggPlus.h  AndMin.h  AndMult.h  CogDefuzz.h  IsGaussian.h  IsSigmoid.h  IsTrapezoid.h  IsTrapezoidLeft.h  IsTrapezoidRight.h  IsTriangle.h  MamdaniDefuzz.h  NotMinus1.h  Operator.h  Operators.h  OrMax.h  OrPlus.h  Shape.h  SugenoConclusion.h  SugenoDefuzz.h  SugenoThen.h  ThenMin.h  ThenMult.h  isTriangle.h  operator.h  operators.h
